2006-11-24  Brian Warner  <warner@lothar.com>

	* buildbot/process/builder.py (Builder._attached): delay the call
	to maybeStartBuild for a reactor turn, to avoid starting a build
	in the middle of a reconfig (say, if the new Builder uses a new
	slave which is already connected).

2006-11-23  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_transfer.py: appease pyflakes
	* buildbot/test/test_steps.py: same

	* buildbot/test/test_bonsaipoller.py: remove the 'import *' that
	keeps pyflakes from finding undefined names

	* buildbot/master.py (BuildMaster.loadConfig_Builders): changing a
	Builder no longer induces a disconnect/reconnect cycle. This means
	that any builds currently in progress will not be interrupted, and
	any builds which are queued in the Builder will not be lost. This
	is implemented by having the new Builder extract the state (i.e.
	all pending Builds and any desired SlaveBuilders) from the old
	Builder.
	(BotPerspective): refactor. The BotPerspective no longer keeps
	track of all the Builders that want to use this slave; instead, it
	asks the BotMaster each time it needs this list. This removes
	addBuilder and removeBuilder. Clean up attached() to acquire all
	the slave's information in a more atomic fashion. updateSlave() is
	now the way to make sure the slave is using the right set of
	Builders: just call it after everything else has been
	reconfigured.
	(BotMaster): refactor, removing addBuilder/removeBuilder and
	replacing them with an all-at-once setBuilders() call.

	* buildbot/test/test_slaves.py (Reconfig): new test case to
	exercise this functionality
	* buildbot/steps/dummy.py (Wait): new dummy BuildStep for the test
	* buildbot/slave/commands.py (WaitCommand): same

	* docs/buildbot.texinfo (Loading the Config File): document the
	changes

	* buildbot/process/builder.py (SlaveBuilder): refactor. Allow the
	SlaveBuilder to have its parent Builder changed.
	(SlaveBuilder.isAvailable): new method to give access to state,