@@ -1,5 +1,12 @@
 2006-11-24  Brian Warner  <warner@lothar.com>
 
+	* buildbot/clients/debug.py: replace 'Force Build' button with
+	'Request Build' (which just adds one to the queue), add Ping
+	Builder, add branch/revision fields to Request Build.
+	* buildbot/clients/debug.glade: same
+	* buildbot/master.py: update interface to match. This creates an
+	incompatibility between new debugclients and old buildmasters.
+
 	* buildbot/process/builder.py (Builder._attached): delay the call
 	to maybeStartBuild for a reactor turn, to avoid starting a build
 	in the middle of a reconfig (say, if the new Builder uses a new
